fixed z-index >992px

--- a/cart/cart.css
+++ b/cart/cart.css
@@ -1,3 +1,9 @@
+main
+{
+    position: relative;
+    z-index: 2;
+}
+
 @media screen and (max-width: 768px) 
 {
     #page-footer
